# ethers-abigen-monorepo-repro

./: Cargo.toml
package1/: Cargo.toml
package1/src/: lib.rs
