[package]
name = "test-ethers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
# ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
# this doesn't work
# ethers-contract = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"], rev = "72c77dd0cbacfaa790e3fe3747d5e94436dec0bd" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
